Resolving build issues

--- a/ui.apps/src/main/content/jcr_root/apps/myproject/components/content/author/author.html
+++ b/ui.apps/src/main/content/jcr_root/apps/myproject/components/content/author/author.html
@@ -1,5 +1,5 @@
-<H1>Author Component<H1>
-<sly data-sly-use.author="com.mysitecreation.core.models.GAuthorModel"></sly>
+<H1>Author Component</H1>
+<sly data-sly-use.author="com.myproject.aem.core.models.GAuthorModel"></sly>
 Title Testing
 <div> Title : "${author.title}" </div> 
 <div> Description : "${author.description}" </div> 
